<resources>
    <string name="app_name">Tryp Driver</string>
    <string name="the_first_surge_free_app_that_gives_you">The first surge free app that gives you \n reward on every ride</string>
    <string name="login">Login</string>
    <string name="i_m_new">I\'m New</string>
    <string name="resend_sms_code">Resend SMS Code</string>
    <string name="enter_sms_code">Enter SMS Code</string>
    <string name="we_ve_sent_you_a_authentication_code">We’ve sent you a authentication code</string>
    <string name="tryp_prime">Tryp Prime</string>
    <string name="create_account">Create Account</string>
    <string name="send_code">Send Code</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="where_to">Where to?</string>
    <string name="tryp_now">Tryp Now</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="united_states_of_america_1">United States of America(+1)</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="not_a_member_yet_don_t_worry_simply_enter_your_details_below_to_get_started">Not a member yet? Don’t worry, simply enter your details below to get started</string>
    <string name="audi_a8_2017">Audi A8 2017</string>
    <string name="phone_hint">254335659</string>
    <string name="welcome_back">Welcome back, you can login securely below</string>
    <string name="ready">Ready for your next tryp?</string>
    <string name="set_up">Let’s get your account set up!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_hint">email@test</string>
    <string name="reffered_by">Reffered by</string>

    <string name="daniel_customer_name">Daniel Kornson</string>
    <string name="daniel_customer_rating">5.0</string>
    <string name="total_trypes">14</string>
    <string name="total_trypes_caption">Total Tryps</string>
    <string name="distance">26 km</string>
    <string name="distance_caption">Distance</string>
    <string name="ride_estimate">$ 92</string>
    <string name="ride_estimate_caption">Ride Estimate</string>
    <string name="ongoing_tryp_caption">Ongoing Tryp</string>
    <string name="ongoing_tryp_date">28 Jun, 06:30 PM</string>
    <string name="contact_button">Contact</string>
    <string name="start_tryp">Start Tryp</string>

    <string name="ride_completed">Ride Completed</string>
    <string name="ride_sum">$45</string>
    <string name="ride_successful">You have successfully completed your ride.\nPlease collect the amount from the customer.</string>

    <string name="action_home">Home</string>
    <string name="action_trip_history">Trip History</string>
    <string name="action_reports">Reports</string>
    <string name="action_notification">Notification</string>
    <string name="action_expense_tracking">Expense Tracking</string>
    <string name="action_emergency_contact">Emergency Contact</string>
    <string name="action_promotion">Promotion</string>
    <string name="action_invite_friend">Invite Friend</string>
    <string name="action_help">Help</string>
    <string name="action_about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="tryp_prime_sum_10_20">$10 - $20</string>
    <string name="confirm_booking_button">Confirm Booking</string>
    <string name="screen7_title">Where To?</string>

    <string name="screen27_title">Expense Tracking</string>
    <string name="oil_change">Oil Change</string>
    <string name="gas_fill_up">Gas Fill up</string>
    <string name="break_change">Break change</string>
    <string name="tire_change">Tire change</string>
    <string name="vehicle_service">Vehicle service</string>
    <string name="car_wash">Car Wash</string>
    <string name="car_essentials">Car essentials</string>
    <string name="report_earning_caption">Earning</string>
    <string name="report_miles_caption">Miles</string>
    <string name="screen28_title">Report</string>

    <string-array name="spinner_list">
        <item>Weekly</item>
    </string-array>

    <string name="screen17_title">Your Trips</string>
    <string name="past_trips">Past</string>
    <string name="upcoming_trips">Upcoming</string>

</resources>
