<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="398dp"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/customer_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/customer"
                android:scaleType="fitCenter"
                />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/customer_cardView"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="326dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/screen24_customer_name_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="23dp"
                        android:fontFamily="@font/opensans_bold"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:text="@string/daniel_customer_name"/>

                    <TextView
                        android:id="@+id/screen24_customer_rating_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="23dp"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:text="@string/daniel_customer_rating"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/star"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="29dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="72dp"
                    android:background="@drawable/rectangle"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/total_tryps_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_trypes"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_trypes_caption"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="13sp"
                            android:textAlignment="center"
                            android:textColor="#828282" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/splitter"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/distance_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance_caption"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="13sp"
                            android:textAlignment="center"
                            android:textColor="#828282" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/splitter"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/ride_estimate_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ride_estimate"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="18sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:layout_width="115dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ride_estimate_caption"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="13sp"
                            android:textAlignment="center"
                            android:textColor="#828282" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="496dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="22dp"
                        android:text="@string/ongoing_tryp_caption"
                        android:fontFamily="@font/opensans_bold"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="89dp"
                        android:layout_marginTop="7dp"
                        android:src="@drawable/map"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="19dp"
                        android:layout_marginStart="22dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendar"/>

                        <TextView
                            android:id="@+id/ongoing_tryp_date_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/ongoing_tryp_date"
                            android:fontFamily="@font/opensans_regular"
                            android:textSize="13sp"
                            android:textColor="#333333"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/screen23_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:backgroundTint="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/contact_button"
        style="@style/AppTheme.Button"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:elevation="10dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_button"
        android:letterSpacing="0" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>